--- a/ZHRUG_presentation.qmd
+++ b/ZHRUG_presentation.qmd
@@ -9,16 +9,17 @@ format:
     slide-number: true
     width: 1600
     height: 900
+    embed-resources: true
     confetti:
-      particleCount: 1000
-      angle: 90
-      spread: 300
-      startVelocity: 35
-      gravity: 0.2
-      drift: 0
-      ticks: 300
-      colors: ['#26ccff', '#a25afd', '#ff5e7e', '#88ff5a', '#fcff42', '#ffa62d', '#ff36ff']
-      scalar: 0.5
+    particleCount: 1000
+    angle: 90
+    spread: 300
+    startVelocity: 35
+    gravity: 0.2
+    drift: 0
+    ticks: 300
+    colors: ['#26ccff', '#a25afd', '#ff5e7e', '#88ff5a', '#fcff42', '#ffa62d', '#ff36ff']
+    scalar: 0.5
 revealjs-plugins:
   - confetti
 ---
@@ -26,15 +27,9 @@ revealjs-plugins:
 
 ## Approach Us!
 
-![](assets/images/host1.svg){width=50%}
+![](assets/images/host1.svg){width=95%}
 
 [zurichrusergroup@gmail.com](style="color:#276DC2;") or via Website!
-
-
-::: {.notes}
-
-:::
-
 
 
 ## Who is Us?
