--- a/ZHRUG_presentation.qmd
+++ b/ZHRUG_presentation.qmd
@@ -1,6 +1,10 @@
 ---
 title: "Welcome to the 36th meeting of the"
 subtitle: "Zurich R User Group"
+title-slide-attributes: 
+  data-notes: "Before we dive into the official part of today’s event, we’d like to      share some exciting updates. We’re a new group of organizers, and with that comes some fresh changes!
+First, we’ve launched a brand-new website where you can find all the latest updates, resources, and information about our events. We’re also expanding our presence on social media—you can now connect with us on LinkedIn and Bluesky. Be sure to follow us there to stay in the loop and engage with the community between meetups.
+We’re really looking forward to growing this group together and making this a vibrant, welcoming space for R enthusiasts of all levels. Thank you for being part of this journey with us."
 format:
   revealjs:
     template-partials:
@@ -25,11 +29,25 @@ revealjs-plugins:
 ---
 
 
+
 ## Approach Us!
 
 ![](assets/images/host1.svg){width=95%}
 
 [zurichrusergroup@gmail.com](style="color:#276DC2;") or via Website!
+
+::: {.notes}
+- we are always looking for hosts and people who want to share their work, ideas, packages or shiny apps! 
+
+- fantastic opportunity to showcase your company, to meet people, to get feedback from an outside community with different perspectives and potentially high technical knowhow
+
+- very kind and well-being community giving constructive and very useful feedback
+
+- way of giving back smth to the community
+
+- approach us!
+:::
+
 
 
 ## Who is Us?
